--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -66,13 +66,50 @@ footer{
     grid-template-columns: auto auto auto;
     padding: 20px;
     gap: 50px;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .products-product{
-    width: 280px;
-    height: 350px;
     background-color: black;
+}
+
+.product-card{
+    background-color: red;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.product-card img{
+    width: 300px;
+    min-height: 300px;
+    padding-bottom: 20px;
+}
+
+.product-name{
+    margin-bottom: 10px;
+    font-weight: 600;
+    font-size: 18px;
+}
+
+.product-price{
+    margin-bottom: 10px;
+    font-weight: 500;
+    font-size: 15px;
+}
+
+.product-buy{
+    width: 100%;
+    height: 4vh;
+    background-color: blue;
+    color: white;
+    transition-duration: 0.4s;
+    border: none;
+}
+
+.product-buy:hover{
+    background-color: black;
+    color: yellow;
 }
 
 .ecommerce-footer{
