--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,6 +11,7 @@
     "menu main"
     "footer footer";
     /* gap: 10px; */
+    grid-template-columns: 150px 1fr;
 }
     
 
@@ -24,7 +25,7 @@ menu{
     grid-area: menu;
     background-color: rgb(187, 187, 187);
     min-height: 86vh;
-    width: 10vw;
+    width: auto;
     border-right: 1px solid black;
 }
     
@@ -32,7 +33,7 @@ main{
     grid-area: main;
     background-color: rgb(187, 187, 187);
     min-height: 86vh;
-    width: 90vw;
+    width: auto;
 }
     
 footer{
@@ -64,9 +65,8 @@ footer{
 .grid-products{
     display: grid;
     grid-template-columns: auto auto auto;
-    padding: 20px;
+    padding: 10px;
     gap: 50px;
-    justify-content: space-between;
 }
 
 .products-product{
@@ -78,10 +78,12 @@ footer{
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
 }
 
 .product-card img{
-    width: 300px;
+    width: 100%;
+    height: auto;
     min-height: 300px;
     padding-bottom: 20px;
 }
